2014-03-11  Barak A. Pearlmutter  <barak@cs.nuim.ie>
	* Makefile.am: Install files COPYING, ChangeLog, AUTHORS, NEWS,
	README, and TODO in the doc directory.
	* doc/Makefile.am: Install bbdb.pdf in the doc directory.

2014-03-11  Barak A. Pearlmutter  <barak@cs.nuim.ie>
	* m4/package_date.m4: Use "date -u" if "date --rfc-3339" fails.

2014-02-28  Roland Winkler  <winkler@gnu.org>
	* configure.ac: Increase BBDB version number to 3.1.
	* README: Update accordingly.  Fix typos.
	* Makefile.am: Include autogen.sh in distribution.
	* lisp/Makefile.am: Include lisp/bbdb-pkg.el in distribution.
	* lisp/makefile-temp: Include lisp/bbdb-pkg.el.

2014-02-28  Roland Winkler  <winkler@gnu.org>
	Do not use `prompt' in a non-emacs sense.
	* lisp/bbdb.el: Do not autoload bbdb-search and bbdb-search-prompt
	when compiling.
	(bbdb-auto-revert, bbdb-silent, bbdb-default-domain)
	(bbdb-default-area-code, bbdb-offer-to-create)
	(bbdb-update-records-address): Fix docstring.

	* lisp/bbdb-com.el (bbdb-search-read): Renamed from
	bbdb-search-prompt.
	(bbdb, bbdb-search-name, bbdb-search-organization)
	(bbdb-search-address, bbdb-search-mail, bbdb-search-phone)
	(bbdb-search-xfields): Change accordingly.
	(bbdb-read-record, bbdb-create, bbdb-completing-read-records): Fix
	docstring.
	(bbdb-read-field): Renamed from bbdb-prompt-for-new-field.  Use
	arg flag instead of current-prefix-arg.  Add docstring.
	(bbdb-insert-field): Change accordingly. Fix docstring.
	(bbdb-edit-foo): Change accordingly.

	* lisp/bbdb-mua.el (bbdb-query-create): Renamed from
	bbdb-prompt-for-create.
	(bbdb-update-records)
	* lisp/bbdb.el (bbdb-insert-field-menu): Change accordingly.

2014-02-28  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el: Do not autoload bbdb-search and bbdb-search-prompt
	when compiling.
	(bbdb-address-format-list, bbdb-buffer, bbdb-revert-buffer)
	* lisp/bbdb-com.el (bbdb-complete-mail): Fix docstring.

2014-02-17  Roland Winkler  <winkler@gnu.org>