@@ -27,7 +27,7 @@
 (defconst bbdb-version-date "@PACKAGE_DATE@"
   "Version date of BBDB.")
 
-(defcustom bbdb-print-tex-path '("/usr/local/share")
+(defcustom bbdb-print-tex-path '("@pkgdatadir@")
   "List of directories with the BBDB tex files."
   :group 'bbdb-utilities-print
   :type '(repeat (directory :tag "Directory")))
